--- a/src/style/layout/_header.scss
+++ b/src/style/layout/_header.scss
@@ -1,11 +1,10 @@
 header {
   position: fixed;
-  z-index: 1000;
   margin-top: 3 * $line-height;
   margin-bottom: $line-height;
   width: 100%;
   text-align: center;
-  z-index: 1000000;
+  z-index: 10000;
   @include screen-size('small') {
     margin-top: $margin / 2;
   }
